--- a/app/templates/menu/menu-provider.jade
+++ b/app/templates/menu/menu-provider.jade
@@ -6,15 +6,13 @@ ion-side-menus(enable-menu-with-back-views='false')
         button.button.button-icon.button-clear.ion-navicon(menu-toggle='left')
     ion-nav-view(name='menuContent')
   ion-side-menu(side='left')
-    ion-header-bar.bar-stable
-    ion-content
+    ion-content.main-sidebar
+      ion-item.sidebar-header-current-user--wrapper(
+        menu-close=''
+      )
+        sidebar-header-current-user
+
       ion-list
-        ion-item(
-          menu-close
-          nav-clear
-          ui-sref='provider.profile-provider.info'
-        )
-          | {{::("menu.provider.profile"|translate)}}
         ion-item(
           menu-close
           nav-clear
@@ -27,6 +25,12 @@ ion-side-menus(enable-menu-with-back-views='false')
           ui-sref='provider.items.index'
         )
           | {{::("menu.provider.products"|translate)}}
+        ion-item(
+          menu-close
+          nav-clear
+          ui-sref='provider.profile-provider.info'
+        )
+          | {{::("menu.provider.profile"|translate)}}
         ion-item(
           menu-close
           nav-clear
