--- a/app/templates/directives/sidebar-header-current-user/sidebar-header-current-user.jade
+++ b/app/templates/directives/sidebar-header-current-user/sidebar-header-current-user.jade
@@ -1,10 +1,11 @@
 .sidebar-header-current-user
   .avatar-wrapper
     img.img-circle(
-      ng-src="{{ siteVm.userImageURL }}"
+      ng-src="{{ sidebarHeaderCurrentUserVM.userImageURL }}"
     )
-  .username-wrapper {{ siteVm.userName }}
+  .username-wrapper {{ sidebarHeaderCurrentUserVM.userName }}
   .current-user-actions
     a.button.button-clear.button-positive.button-small(
       ui-sref='app.profile.info'
+      ng-if='sidebarHeaderCurrentUserVM.showProfileLink'
     ) {{ ::("menu.profile" | translate) }}
