enhance geolocation in maps directive

--- a/app/templates/profile/addresses/form_template.jade
+++ b/app/templates/profile/addresses/form_template.jade
@@ -16,7 +16,7 @@ form(
         default-in-current-geolocation="pfaVm.defaultInCurrentGeolocation"
         direccion="pfaVm.addressFormData.direccion_uno"
         direccion-dos="pfaVm.addressFormData.direccion_dos"
-        ciudad="pfaVm.addressFormData.ciudad"
+        referencia="pfaVm.addressFormData.referencia"
         geolocation-message-key="pfaVm.geolocationMessageKey"
       )
       show-error(array-messages='pfaVm.messages.lat || pfaVm.messages.lon')
