add maps to provider offices

--- a/app/styles/overrides/bar-footer.scss
+++ b/app/styles/overrides/bar-footer.scss
@@ -8,12 +8,14 @@
   line-height: 28px;
 }
 
-.bar .button.button-xsmall,
-  .button-positive.button-xsmall,
-  .button-energized.button-xsmall {
-  font-family: Montserrat-Light;
-  padding: 0 20px;
-  line-height: 25px;
+.bar {
+  .button.button-xsmall,
+    .button-positive.button-xsmall,
+    .button-energized.button-xsmall {
+    font-family: Montserrat-Light;
+    padding: 0 20px;
+    line-height: 25px;
+  }
 }
 
 .bar-footer {
