--- a/app/templates/offices/new-edit.jade
+++ b/app/templates/offices/new-edit.jade
@@ -13,11 +13,21 @@ ion-modal-view
     novalidate
   )
     ion-content.resource-form.office-form
-      .list.list-inset
+      .list.list-inset.fields-wrapper
         legend(ng-if="!officesVm.office.id")
           | {{::("globals.new"|translate)}} {{::("office.office"|translate)}}
         legend(ng-if="officesVm.office.id")
           | {{::("globals.edit"|translate)}} {{::("office.office"|translate)}}
+
+        maps(
+          lat="officesVm.office.lat"
+          lon="officesVm.office.lon"
+          direccion="officesVm.office.direccion"
+          geolocation-message-key="officesVm.geolocationMessageKey"
+          default-in-current-geolocation="officesVm.mapDefaultInCurrentGeolocation"
+        )
+        show-error(array-messages='officesVm.messages.lat || officesVm.messages.lon')
+        .text-stable {{ officesVm.geolocationMessageKey | translate }}
 
         label.item.item-input.item-select
           span.input-label {{ ::("office.place"|translate) }}
