--- a/app/styles/offices/show.scss
+++ b/app/styles/offices/show.scss
@@ -6,12 +6,11 @@
   }
 
   .office-map {
-    height: 300px;
     margin: 0 0 15px 0;
-    box-shadow: 0 1px 5px transparentize($base-grey, .5);
 
     #office-map {
-      height: 100%;
+      width: 100%;
+      box-shadow: 0 1px 5px transparentize($base-grey, .5);
     }
   }
 }
