--- a/app/templates/profile/info/info.jade
+++ b/app/templates/profile/info/info.jade
@@ -4,9 +4,10 @@ ion-view(
   ion-nav-title
     .alt-logo
 
-  ion-content(
-    scroll="false"
-  )
+  ion-content
+
+    ng-include(src="'templates/profile/profile.html'")
+
     .list.list-inset.list--no-borders.text-center.actions-wrapper
       button.button.button-clear.button-positive(
         ng-click="piVm.showNewModal(piVm.user)"
