--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -1,35 +1,19 @@
-ion-view(
-  view-title="{{::('profile.title')|translate}}"
-)
-  ion-nav-title
-    .alt-logo
-  ion-content.has-header.show-profile-page(
-    overflow-scroll="true"
-    locking="false"
-  )
-    .row
-      .col.profile-header
-        img.img-profile(
-          ng-src="{{ siteVm.userImageURL }}"
-        )
-        .user-name {{ siteVm.userName }}
+.show-profile-page
+  .row
+    .col.profile-header
+      img.img-profile(
+        ng-src="{{ siteVm.userImageURL }}"
+      )
+      .user-name {{ siteVm.userName }}
 
-    .tab-container
-      .tab-item(
-        menu-close
-        ng-click = "pVm.tab='info'"
-        ng-class="{'tab-item-active': pVm.tab==='info'}"
-        ui-sref="app.profile.info"
-      ) {{::('profile.tabs.info'|translate)}}
-      .tab-item(
-        menu-close
-        ng-click = "pVm.tab='addresses'"
-        ng-class="{'tab-item-active': pVm.tab==='addresses'}"
-        ui-sref="app.profile.addresses.index"
-      ) {{::('profile.tabs.addresses'|translate)}}
-
-    .profile-body
-      row(ng-if="pVm.tab==='info'")
-        ion-nav-view(name='menuContent@profileInfo')
-      row(ng-if="pVm.tab==='addresses'")
-        ion-nav-view(name='menuContent@addressesIndex')
+  .tab-container
+    .tab-item(
+      menu-close
+      ng-class="{'tab-item-active': piVm.tab==='info'}"
+      ui-sref="app.profile.info"
+    ) {{::('profile.tabs.info'|translate)}}
+    .tab-item(
+      menu-close
+      ng-class="{'tab-item-active': pfaVm.tab==='addresses'}"
+      ui-sref="app.profile.addresses.index"
+    ) {{::('profile.tabs.addresses'|translate)}}
