minor UI enhances

--- a/app/templates/profile/addresses/form_template.jade
+++ b/app/templates/profile/addresses/form_template.jade
@@ -106,7 +106,7 @@ form(
       )
         span.input-label {{::("profile.addresses.telephoneNumber"|translate)}}
         input(
-          type='text'
+          type='tel'
           ng-model='pfaVm.addressFormData.numero_convencional'
         )
       .errors-wrapper
