agregando * a los campos obligatorios (#230)
* agregando * a los campos obligatorios

* jade: abbr *

* * a input-label.required

--- a/app/templates/offices/new-edit.jade
+++ b/app/templates/offices/new-edit.jade
@@ -41,7 +41,7 @@ ion-modal-view
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': officesVm.form.direccion.$touched && officesVm.form.direccion.$invalid}"
         )
-          span.input-label {{::("office.direccion"|translate)}}
+          span.input-label.required {{::("office.direccion"|translate)}}
           input(
             type='text'
             name='direccion'
@@ -61,7 +61,7 @@ ion-modal-view
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': officesVm.form.telefono.$touched && officesVm.form.telefono.$invalid}"
           )
-          span.input-label {{::("office.telefono"|translate)}}
+          span.input-label.required {{::("office.telefono"|translate)}}
           input(
             type='text'
             name='telefono'
