tweaks and stuff

--- a/app/styles/resource/details-table.scss
+++ b/app/styles/resource/details-table.scss
@@ -20,6 +20,7 @@
 .resource-details-table {
   font-size: 16px;
   margin-top: 0;
+  font-family: Montserrat-Light;
 
   .label {
     color: $base-grey;
