--- a/app/templates/courier/orders.jade
+++ b/app/templates/courier/orders.jade
@@ -3,20 +3,43 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content
-    .orders-container
-      .row
-        .total-orders
-          | {{::orVm.titleResultsFound}}
-      .row
-        .orders
-          .order(ng-repeat="order in orVm.orders")
-            .distance-circle
-              .range
-                | 1.2
-            .establishment(ui-sref='courier.order({ id: order.id, order: order})')
-              .name
-                .text {{order.provider_profile.nombre_establecimiento}}
-                .icon-location
-              .location 1.2 km {{::("courier.labels.currentLocation"| translate)}}
-              .time 1 hora {{::("courier.labels.forDelivery"| translate)}}
+  ion-content.courier-shipping-request-index-list
+    maps(
+      disable-edit="true"
+      on-render="orVm.mapRendered(map)"
+      default-in-current-geolocation="true"
+    )
+
+    .list.list-inset.list--bottom-narrow
+      p
+        | {{ ::("courier.labels.found" | translate) }}
+        |  {{ orVm.totalOrders }}
+        |  {{ ::("courier.labels.closeToYou" | translate) }}
+    
+    .list.list-inset.list--top-narrow
+      .shipping-request-container(
+        ng-repeat="order in orVm.orders"
+        ui-sref='courier.order({ id: order.id, order: order})'
+      )
+        .distance-circle
+          .fake-vertical-line.top
+          .range
+            span 1.2
+          .fake-vertical-line.bottom
+        .shipping-request.resource-rounded-container
+          .row
+            .col
+              .icon-location
+                i.ion-navigate
+              .container-title
+                | {{ order.provider_profile.nombre_establecimiento }}
+          .row
+            .col.location
+              | 1.2 km {{::("courier.labels.currentLocation"| translate)}}
+          .row
+            .col.time
+              | 1 hora {{::("courier.labels.forDelivery"| translate)}}
+              
+    .list.list-inset.list--top-narrow
+      p.text-center
+        | {{ ::("shippingRequest.noMoreItems" | translate) }}
