--- a/app/styles/orders/provider-orders-index-page.scss
+++ b/app/styles/orders/provider-orders-index-page.scss
@@ -1,24 +1,25 @@
-.order-show-page{
+.provider-orders-index-page{
   font-family: Montserrat-Light;
+  color: $base-grey;
 
   .page-title {
     font-family: Montserrat-Regular;
 
     h2 {
-      color: $dark;
+      color: $base-grey;
       font-size: 22px;
       line-height: 24px;
+      font-family: Montserrat-Regular;
+      text-transform: capitalize;
     }
   }
 
   .order-container{
-    border-radius: 10px;
-    border: 1px solid $base-yellow;
     margin-top: 15px;
     cursor: pointer;
-    i{
+    i {
       color: $base-yellow;
-      span{
+      span {
          padding: 5px
       }
     }
