--- a/app/templates/courier/orders.jade
+++ b/app/templates/courier/orders.jade
@@ -3,7 +3,7 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content.courier-shipping-request-index-list
+  ion-content.courier-shipping-request-index-list.courier-shipping-request-common
     maps(
       disable-edit="true"
       on-render="orVm.mapRendered(map)"
