--- a/app/templates/courier/orders/show.jade
+++ b/app/templates/courier/orders/show.jade
@@ -3,8 +3,8 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content.orders-container
-    .order-map
+  ion-content.shipping-request-show-page.courier-shipping-request-common
+    .map-view
       #order-map(data-tap-disabled="true")
 
     .list.list-inset.list--no-borders.resource-detail-summary
