--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,7 +60,9 @@
 @import "error/error";
 @import "products/show";
 @import "products/add-to-wishlist";
-@import "couriers/orders";
+@import "couriers/shipping-request-common";
+@import "couriers/shipping-request-index-list";
+@import "couriers/shipping-request-show-page";
 @import "billing-addresses/billing-addresses";
 @import "offices/show";
 @import "offices/form";
