--- a/app/styles/overrides/popup.scss
+++ b/app/styles/overrides/popup.scss
@@ -2,8 +2,11 @@
   // overriding popup for ion datetime picker
   .popup-head {
     h3 {
-      font-family: Montserrat-SemiBold;
+      font-family: Montserrat-Regular;
     }
+  }
+  .popup-sub-title {
+    font-family: Montserrat-Light;
   }
   select, .year-input input {
     font-family: Montserrat-Regular;
