--- a/app/templates/courier/orders/show.jade
+++ b/app/templates/courier/orders/show.jade
@@ -9,20 +9,25 @@ ion-view(
 
     .list.list-inset.list--no-borders.resource-detail-summary
       h2 {{::("courier.order"|translate)}}{{ ::coVm.order.id }}
+      .status-text
+        | {{ ("shippingRequest.status." + coVm.order.status | translate) }}
 
     .list.list-inset.list--no-borders.resource-details-table
       p.resource-detail-title
-        | {{ coVm.order.status_text }}
+        | {{::("dispatchers.dispatchersData"|translate)}}
       .row
         .col.col-50.label {{::("courier.ordersNumber"|translate)}}
         .col.col-50.value {{coVm.order.id}}
       .row
-        .col.col-50.label {{::("provider.address"|translate)}}
+        .col.col-50.label {{ ::("shippingRequest.providerName" | translate) }}
+        .col.col-50.value {{ coVm.provider.nombre_establecimiento }}
+      .row
+        .col.col-50.label {{ ::("order.summary.shippingCosts" | translate) }}
         .col.col-50.value
-          //- direccion for validate_provider
-          //- direccion_uno for shipping req
-          | {{ ::coVm.address.direccion }}
-          | {{ ::coVm.address.direccion_uno }}
+          span
+            | {{ ::("item.currency." + coVm.fareCurrency | translate) }}
+          span
+            | {{ ::(coVm.fareCurrencyCents | priceCurrency | currency:'') }}
       //- TODO
         .row
           .col.col-50.label {{::("courier.dateDispatcher"|translate)}}
@@ -31,9 +36,73 @@ ion-view(
           .col.col-50.label {{::("courier.nameDispatcher"|translate)}}
           .col.col-50.value Manuel López
 
+    .list.list-inset.list--no-borders.resource-details-table(
+      ng-if="coVm.shouldDisplayClientDetails"
+    )
+      p.resource-detail-title
+        | {{ ::("shippingRequest.clientDetails" | translate) }}
+      .row
+        .col.col-50.label {{ ::("order.summary.total" | translate) }}
+        .col.col-50.value
+          span
+            | {{ ::("item.currency." + coVm.fareCurrency | translate) }}
+          span
+            | {{ ::(coVm.orderItemsTotal | priceCurrency | currency:'') }}
+      .row
+        .col.col-50.label {{ ::("cart.paymentMethod" | translate) }}
+        .col.col-50.value {{ ::coVm.order.customer_order.forma_de_pago }}
+      .row
+        .col.col-50.label {{ ::("client.clientName" | translate) }}
+        .col.col-50.value
+          span(
+            ng-if="coVm.order.customer_order.anon_billing_address"
+          ) {{::("cart.anonBillingAddress"|translate)}}
+          span(
+            ng-if="!coVm.order.customer_order.anon_billing_address"
+          ) {{ ::coVm.billingAddress.razon_social }}
+      .row
+        .col.col-50.label {{::("shippingRequest.deliverToAddress"|translate)}}
+        .col.col-50.value
+          //- direccion for validate_provider
+          //- direccion_uno for shipping req
+          | {{ ::coVm.address.direccion }}
+          | {{ ::coVm.address.direccion_uno }}
+      .row(
+        ng-if="!coVm.order.customer_order.anon_billing_address"
+      )
+        .col.col-50.label {{ ::("client.telefono" | translate) }}
+        .col.col-50.value
+          | {{ ::coVm.billingAddress.telefono }}}
+
+      .row-wrapper(
+        ng-repeat="orderItem in coVm.order.customer_order.customer_order_items"
+      )
+        .row
+          .col.col-50.label {{ ::("item.item" | translate) }}
+          .col.col-50.value
+            | {{ orderItem.provider_item.titulo }}
+        .row
+          .col.col-50.label {{ ::("shippingRequest.customerOrderItem.cantidad" | translate) }}
+          .col.col-50.value {{ orderItem.cantidad }}
+        .row(
+          ng-if="orderItem.observaciones"
+        )
+          .col.col-50.label {{ ::("cart.observations" | translate) }}
+          .col.col-50.value {{ orderItem.observaciones }}
+
   ion-footer-bar.bar-stable.text-center
     button.button.button-outline.button-energized.button-small(
       ng-if="coVm.order.status === 'new'"
       ng-click="coVm.showTakeRequestModal()"
     )
       | {{ ::("shippingRequest.takeRequest" | translate) }}
+    button.button.button-outline.button-energized.button-small(
+      ng-if="coVm.order.status === 'assigned'"
+      ng-click="coVm.courierIsInStore()"
+    )
+      | {{ ::("shippingRequest.pickingUp" | translate) }}
+    button.button.button-outline.button-energized.button-small(
+      ng-if="coVm.order.status === 'in_progress'"
+      ng-click="coVm.courierHasDelivered()"
+    )
+      | {{ ::("shippingRequest.delivered" | translate) }}
