Use element instead of id in maps directive

--- a/app/templates/directives/maps/maps.jade
+++ b/app/templates/directives/maps/maps.jade
@@ -6,8 +6,7 @@
       markers="mapVm.markers"
       data-tap-disabled="true"
     )
-  div(
-    id="map-directive"
+  div.map-directive(
     data-tap-disabled="true"
   )
 
