se corrigio bug de toggle, inactivo/activo , opaco cuando es inactivo

--- a/app/styles/offices/show.scss
+++ b/app/styles/offices/show.scss
@@ -1,6 +1,10 @@
 .office-show-page {
   font-family: Montserrat-Light;
 
+  &.content-office-disabled{
+    opacity:0.4;
+  }
+
   .item-toggle {
     border-bottom: 0;
   }
