--- a/app/templates/offices/detail.jade
+++ b/app/templates/offices/detail.jade
@@ -8,14 +8,13 @@ ion-view(
     provider-notifications
 
   ion-content.office-show-page(
-    ng-class="{'content-office-disabled': officesVm.officeDetail.enabled==false}"
+    ng-class="{'content-office-disabled': !officesVm.officeDetail.enabled}"
   )
     ion-toggle(
       ng-change="officesVm.updateOfficeState()"
       ng-model="officesVm.officeDetail.enabled"
       toggle-class="toggle-energized"
-    ) {{::("office.officeEnabled"|translate)}}
-
+    ) {{officesVm.active.label}}
     .office-map
       img#office-map(
         ng-src="{{ officesVm.officeDetail.static_map_image }}"
@@ -79,4 +78,4 @@ ion-view(
             span(
               ng-if="!weekday.hora_de_cierre"
             )
-              | {{ ::("office.weekdays.selectHourPlaceholder" | translate) }}            
+              | {{ ::("office.weekdays.selectHourPlaceholder" | translate) }}
