boton en welcome

--- a/app/templates/courier/welcome.jade
+++ b/app/templates/courier/welcome.jade
@@ -12,4 +12,4 @@ ion-view(
         p {{::("courier.welcomeDescription"|translate)}}
     .row
       .list.list-inset.list--centered
-        a.button.button-primary(ui-sref='app.courier.new') {{::("globals.start"|translate)}}
+        a.button.button-outline.button-energized(ui-sref='app.courier.new') {{::("globals.start"|translate)}}
