--- a/app/templates/offices/detail.jade
+++ b/app/templates/offices/detail.jade
@@ -31,6 +31,7 @@ ion-view(
         ) {{::("globals.edit"|translate)}}
         .button.button-clear.button-assertive.button-xsmall(
           ng-click="officesVm.showDeleteOffice()"
+          ng-disabled="true"
         ) {{::("globals.delete"|translate)}}
 
 
